--- a/src/_select.scss
+++ b/src/_select.scss
@@ -1,5 +1,11 @@
 @mixin select() {
+  cursor: pointer;
+
   ul {
     display: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
   }
 }
