--- a/src/_select.scss
+++ b/src/_select.scss
@@ -1,5 +1,6 @@
 @mixin select() {
   cursor: pointer;
+  position: relative;
 
   ul {
     display: none;
@@ -7,5 +8,6 @@
     margin: 0;
     padding: 0;
     position: absolute;
+    width: 100%;
   }
 }
